[gd_scene load_steps=3 format=2]

[ext_resource path="res://Segment.gd" type="Script" id=1]
[ext_resource path="res://textures/Puzzle_Default_Background.png" type="Texture" id=2]

[node name="BlockFit" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
margin_right = 432.0
margin_bottom = 432.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayFieldBG" type="ColorRect" parent="."]
margin_left = 36.0
margin_top = 48.0
margin_right = 756.0
margin_bottom = 552.0
color = Color( 0, 0, 0, 0.2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayField" type="ColorRect" parent="."]
margin_left = 36.0
margin_top = 48.0
margin_right = 756.0
margin_bottom = 552.0
color = Color( 0.192157, 0.0980392, 0.0980392, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessIndicator" type="RichTextLabel" parent="."]
margin_right = 251.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessAnimTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="SuccessPlacard" type="ColorRect" parent="."]
margin_left = -342.0
margin_top = 248.0
margin_right = -22.0
margin_bottom = 328.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessTween" type="Tween" parent="."]
